K3d/ingressControllerByKubeDev/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deploy
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: nginx-blue
        image: fabricioveronez/bluehome
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
