K3d/ingressControllerByKubeDev/dpl-simpleweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleweb-deploy
spec:
  selector:
    matchLabels:
      app: simpleweb
  template:
    metadata:
      labels:
        app: simpleweb
    spec:
      containers:
      - name: simpleweb
        image: fabricioveronez/greenhome
        # image: crccheck/hello-world 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
