K3d/ingressControllerByKubeDev/green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deploy
spec:
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: nginx-green
        image: fabricioveronez/greenhome
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
