K3d/ingressControllerByKubeDev/svc-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  # type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
