K3d/ingressControllerByKubeDev/svc-blue8080.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue8080-service
spec:
  selector:
    app: blue8080
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
