K3d/ingressControllerByKubeDev/svc-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: green
  # type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
