K3d/ingressControllerByKubeDev/svc-green8080.yaml
apiVersion: v1
kind: Service
metadata:
  name: green8080-service
spec:
  selector:
    app: green8080
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30180
