K3d/ingressControllerByKubeDev/svc-simpleweb8080.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleweb-service
spec:
  selector:
    app: simpleweb
  # type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
