K3d/ingressControllerByKubeDev/ing-subdomain-nipio8080.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bysubdomain8080
  # labels:
  #   name: bysubdirectory
spec:
  rules:
  - host: blue8080.c0a864d0.nip.io
  # - host: blue8080.0a0f122c.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blue8080-service
            port: 
              number: 8080
  - host: green8080.c0a864d0.nip.io
  # - host: green8080.0a0f122c.nip.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: green8080-service
            port: 
              number: 8080
